--- a/client/config/.env.production
+++ b/client/config/.env.production
@@ -1,3 +1,2 @@
 REACT_APP_SOME_KEY="Some value"
-REACT_APP_NUKE_API="http://pushnuke.eu-central-1.elasticbeanstalk.com"
-PUBLIC_URL="http://datadev.cloud-rte-france.com/carteProd"
+REACT_APP_NUKE_API="https://push-nuke-back.onrender.com"
