--- a/client/config/.env.development
+++ b/client/config/.env.development
@@ -1,3 +1,3 @@
 REACT_APP_SOME_KEY="Some value"
-REACT_APP_NUKE_API="http://pushnuke.eu-central-1.elasticbeanstalk.com"
+REACT_APP_NUKE_API="http://localhost:3001"
 NODE_PATH="src/"
