--- a/client/config/.env.development
+++ b/client/config/.env.development
@@ -1,3 +1,3 @@
 REACT_APP_SOME_KEY="Some value"
-REACT_APP_NUKE_API="http://localhost:3001"
+REACT_APP_NUKE_API="https://d1bn3skqiiw1jp.cloudfront.net"
 NODE_PATH="src/"
