--- a/client/config/.env.production
+++ b/client/config/.env.production
@@ -1,2 +1,2 @@
 REACT_APP_SOME_KEY="Some value"
-REACT_APP_NUKE_API="https://push-nuke-back.onrender.com"
+REACT_APP_NUKE_API="https://d1bn3skqiiw1jp.cloudfront.net"
