--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.2",
+    "json-server": "^0.17.3",
     "lint-staged": "^13.1.0",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
